# tutorial_poetry_alpha3

./: .gitignore  README.md  pyproject.toml
alpha3/: __main__.py  get_alpha3.py
